--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8"
 django = "^3.0.3"
+gunicorn = "^20.0.4"
+whitenoise = "^5.0.1"
 
 [tool.poetry.dev-dependencies]
 
